# furynote

./: .env.example  .gitignore  README.md
.claude/: settings.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
ai/: Fury Note — AI 개발 지시서 v1.5.md.md  Fury Note — API 명세서 v1.1.md.md  Fury Note — DB 스키마 v1.0.sql.code.sql  Fury Note — 기록 화면 프리뷰 v3.html  Fury Note — 바텀 네비게이션 + 사이드 드로어.html  Fury Note — 설정 화면 v4.html  Fury Note — 앱 첫 화면 (기록 Step 1).html  Fury Note — 진정 가이드.html  Fury Note — 진정 도구 상세 화면.html  Fury Note — 진정 화면 v2.html  Fury Note — 통계 화면 v4.html  Fury Note — 피드 화면 v3.html
backend/: .env.example  .gitignore  animal_sounds_kr.txt  install-service.sh  pyproject.toml  remove-service.sh  requirements.txt  run.py  start-service.sh  stop-service.sh  test_openai.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: device.py  posts.py  purchase.py  router.py
backend/app/core/: __init__.py  config.py  middleware.py  responses.py  signature.py
backend/app/db/: base.py
backend/app/models/: __init__.py  entities.py
backend/app/repositories/: db_repository.py  memory.py
backend/app/schemas/: device.py  posts.py  purchase.py
backend/app/services/: __init__.py  content_policy.py  push_service.py
backend/db/: docker-compose.yml  run_db.sh  schema.sql  stop_db.sh
backend/db/mariadb_portable/: Windows 환경을 위한 MariaDB Portable (독립 실행) 구축 매뉴얼.md  my.ini  run_db.bat
backend/tests/: test_api_routes.py  test_comment_push.py  test_config.py  test_content_policy.py  test_logging.py  test_schema_asset.py
docs/: verification.md
(+120 files in other folders)
